INCLUDE_DIRECTORIES(${CMAKE_CURRENT_BINARY_DIR})

CONFIGURE_FILE(git_config.hpp.in git_config.hpp)

ADD_EXECUTABLE(samplefq samplefq.cpp)
TARGET_LINK_LIBRARIES(samplefq
  -L${Boost_LIBRARY_DIRS}
  ${Boost_FILESYSTEM_LIBRARY}
  ${Boost_SYSTEM_LIBRARY}
  ${Boost_IOSTREAMS_LIBRARY}
  ${Boost_PROGRAM_OPTIONS_LIBRARY}
  )

INSTALL(TARGETS samplefq DESTINATION bin)
